tests/snapshots/integration__validate__arg_choice.snap
---
source: tests/validate.rs
expression: data
---
RUN
prog cmd_arg_with_choices val

# OUTPUT
command cat >&2 <<-'EOF' 
error: invalid value `val` for `[VAL]`
  [possible values: x, y, z]
EOF
exit 1

# BUILD_OUTPUT
error: invalid value `val` for `[VAL]`
  [possible values: x, y, z]
