tests/snapshots/integration__validate__arg_choice_fn.snap
---
source: tests/validate.rs
expression: data
---
RUN
prog cmd_arg_with_choice_fn val

# OUTPUT
command cat >&2 <<-'EOF' 
error: invalid value `val` for `[VAL]`
  [possible values: abc, def, ghi]
EOF
exit 1

# BUILD_OUTPUT
error: invalid value `val` for `[VAL]`
  [possible values: abc, def, ghi]
