tests/snapshots/integration__validate__arg_choice_fn_pass.snap
---
source: tests/validate.rs
expression: data
---
RUN
prog cmd_arg_with_choice_fn val

# OUTPUT
argc_val=val
argc__args=( prog cmd_arg_with_choice_fn val )
argc__fn=cmd_arg_with_choice_fn
argc__positionals=( val )
cmd_arg_with_choice_fn val

# BUILD_OUTPUT
error: invalid value `val` for `[VAL]`
  [possible values: abc, def, ghi]
