tests/snapshots/integration__validate__arg_help_subcmd.snap
---
source: tests/validate.rs
expression: data
---
RUN
prog help cmd_required_multi_arg

# OUTPUT
command cat >&2 <<-'EOF' 
USAGE: prog cmd_required_multi_arg <VAL>...

ARGS:
  <VAL>...

EOF
exit 0

# BUILD_OUTPUT
USAGE: prog cmd_required_multi_arg <VAL>...

ARGS:
  <VAL>...
