tests/snapshots/integration__validate__choice_access_vars.snap
---
source: tests/validate.rs
expression: data
---
************ RUN ************
prog --fa foo

# OUTPUT
command cat >&2 <<-'EOF' 
error: invalid value `foo` for `[VAL]`
  [possible values: abc]
EOF
exit 1

# RUN_OUTPUT
error: invalid value `foo` for `[VAL]`
  [possible values: abc]

************ RUN ************
prog foo

# OUTPUT
command cat >&2 <<-'EOF' 
error: invalid value `foo` for `[VAL]`
  [possible values: def]
EOF
exit 1

# RUN_OUTPUT
error: invalid value `foo` for `[VAL]`
  [possible values: def]
