tests/snapshots/integration__validate__cmd_name_sanitize.snap
---
source: tests/validate.rs
expression: data
---
************ RUN ************
prog --help

# OUTPUT
command cat >&2 <<-'EOF' 
USAGE: prog <COMMAND>

COMMANDS:
  cat
  do

EOF
exit 0

# RUN_OUTPUT
USAGE: prog <COMMAND>

COMMANDS:
  cat
  do

************ RUN ************
prog cat --help

# OUTPUT
command cat >&2 <<-'EOF' 
USAGE: prog cat

EOF
exit 0

# RUN_OUTPUT
USAGE: prog cat

************ RUN ************
prog cat

# OUTPUT
argc__args=( prog cat )
argc__fn=cat_
argc__positionals=(  )
cat_

# RUN_OUTPUT
argc__args=([0]="prog" [1]="cat")
argc__fn=cat_
argc__positionals=()
cat_

************ RUN ************
prog do --help

# OUTPUT
command cat >&2 <<-'EOF' 
USAGE: prog do <COMMAND>

COMMANDS:
  foo
  bar

EOF
exit 0

# RUN_OUTPUT
USAGE: prog do <COMMAND>

COMMANDS:
  foo
  bar

************ RUN ************
prog do

# OUTPUT
command cat >&2 <<-'EOF' 
USAGE: prog do <COMMAND>

COMMANDS:
  foo
  bar

EOF
exit 0

# RUN_OUTPUT
USAGE: prog do <COMMAND>

COMMANDS:
  foo
  bar

************ RUN ************
prog do foo

# OUTPUT
argc__args=( prog do foo )
argc__fn=do_::foo
argc__positionals=(  )
do_::foo

# RUN_OUTPUT
argc__args=([0]="prog" [1]="do" [2]="foo")
argc__fn=do_::foo
argc__positionals=()
do_::foo
