tests/snapshots/integration__validate__empty_choices.snap
---
source: tests/validate.rs
expression: data
---
************ RUN ************
prog --oa foo

# OUTPUT
command cat >&2 <<-'EOF' 
error: invalid value `foo` for `<OA>`
  [possible values: ]
EOF
exit 1

# RUN_OUTPUT
error: invalid value `foo` for `<OA>`
  [possible values: ]
